Fixing Lint Issues